--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "Mansour WOLOU",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "g": "^2.0.1",
     "mongodb": "^4.1.3",
     "node": "^16.10.0",
+    "npm": "^8.1.3",
     "tsc": "^2.0.3"
   },
   "devDependencies": {
