--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tsc": "^2.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.1",
     "nodemon": "^2.0.13",
