--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT=8080
 DB_CONN="mongodb+srv://Mansour:wCC8TQQuHs19qHmG@cluster0.kzxle.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 DB_NAME="Mansour"
 TAGS_COLLECTION_NAME="tags"
