--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "node": "^16.10.0",
-    "npm": "^8.1.4",
+    "npm": "^8.2.0",
     "tsc": "^2.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.1",
+    "dotenv-webpack": "^7.0.3",
     "nodemon": "^2.0.13",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   }
 }
