--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "author": "Mansour WOLOU",
   "license": "MIT",
   "dependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "g": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
+    "multer": "^1.4.4",
     "node": "^16.10.0",
     "npm": "^8.2.0",
     "tsc": "^2.0.3"
@@ -36,6 +40,6 @@
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^4.7.3"
   }
 }
